CHANGES.txt - 2008-07-23
------------------------

CHANGES IN CUPS V1.4b1

	- Added ppdPageSizeLimits API.
	- Added support for new cupsMediaQualifier2, cupsMediaQualifier3,
	  cupsMinSize, and cupsMaxSize attributes.
	- Added cupsResolveConflicts and ppdInstallableConflict APIs.
	- Added support for new cupsUIConstraints and cupsUIResolver
	  attributes for better option conflict detection and
	  resolution.
	- Increased the maximum size of 1284 device ID strings to
	  256 bytes (STR #2877)
	- Added an AccessLogLevel directive to cupsd.conf to control
	  what is logged to the access_log file.
	- The default LogLevel is now "warn" instead of "info" to reduce
	  the amount of logging that is done to disk by default.
	- The PPD compiler did not include OID query keywords in PPD
	  files (STR #2871)
	- The cups-driverd helper program now directly supports driver
	  information files.
	- The USB backend now uses libusb when available (STR #1575)
	- Added ppdLocalizeAttr function to get the localized version
	  of an attribute.
	- MIME types now support a priority() attribute (STR #2719)
	- The standard MIME types are now installed in
	  DataDir/mime (STR #2719)
	- The lpoptions command now describes custom options and
	  the necessary parameters (STR #2660)
	- The ppdmerge program did not support Simplified Chinese
	  or Traditional Chinese language version strings (STR #2851)
	- The PPD compiler now supports localizable attributes
	  (STR #2738)
	- The ppdpo utility now includes cupsIPPReasons values in
	  the message catalogs it generates (STR #2754)
	- The PPD compiler now supports conditional directives
	  (STR #2636)
	- The ppdc utility now supports a "-t" option to test PPD
	  files (STR #2739)
	- The ppdc utility now supports a "-m" option to use the
	  ModelName value as the output filename.
	- The ppdc utility now supports a FileName directive to
	  set an alternate output filename (STR #2740)
	- The side-channel API now supports SNMP queries for the