@@ -92,6 +92,7 @@ LIBSLP		=	@LIBSLP@
 LIBGSSAPI	=	@LIBGSSAPI@
 LIBTIFF		=	@LIBTIFF@
 LIBUSB		=	@LIBUSB@
+LIBWRAP		=	@LIBWRAP@
 LIBZ		=	@LIBZ@
 
 #
